DEV: added dev functions in index.js to use json sample data

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <i class="fa fa-fw fa-inverse fa-play"></i>
                 Get Data
             </button>
+            <button type="button" class="btn btn-primary btn-lg" onclick="loadSampleData()">
+                <i class="fa fa-fw fa-inverse fa-play"></i>
+                Get sample data
+            </button>
             <hr/>
         <pre><code id="output"></code></pre>
         <a id="userAuthenticated"></a>
