--- a/index.html
+++ b/index.html
@@ -3,39 +3,55 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css" rel="stylesheet" crossorigin>
-        <link href="https://unpkg.com/font-awesome@4.7/css/font-awesome.css" rel="stylesheet" crossorigin>
+        <!-- <link href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css" rel="stylesheet" crossorigin>
+        <link href="https://unpkg.com/font-awesome@4.7/css/font-awesome.css" rel="stylesheet" crossorigin> -->
+        <link href="css/templateStyles.css" rel="stylesheet">
         <script src="https://www.unpkg.com/@azure/msal-browser@2.20.0/lib/msal-browser.min.js" crossorigin></script>
+        <script type="text/javascript" src="/js/index.js"></script>
+        <script src="/js/uikit.js"></script>
         <title>
-            Node + Bootstrap Application
+            PowerUi CMS PoC
         </title>
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-primary mb-2">
-            <div class="container-fluid">
-                <span class="navbar-brand" href="#">
-                    Node + Bootstrap Application
-                </span>
+        <!-- HeaderNavigation Menu -->
+        <header>
+            <div data-uk-sticky="animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-navbar-transparent; top: 200">
+                <nav class="uk-navbar-container">
+                  <div class="uk-container">
+                    <div data-uk-navbar>
+                      <div class="uk-navbar-left">
+                        <a class="uk-navbar-item uk-logo uk-visible@m" href="index.html">EloGroup | PowerUi</a>
+                        <!-- É aqui que o link de todas as seções são renderizados -->
+                        <ul class="uk-navbar-nav uk-visible@m" id="headerSectionList">
+                          <li >
+                            <a href="#" onclick="run()" style="color:rgba(255,255, 255, 1) ">Acessar a Documentação</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </nav>
             </div>
-        </nav>
-        <main class="container d-grid gap-2">
-            <button type="button" class="btn btn-primary btn-lg" onclick="run()">
-                <i class="fa fa-fw fa-inverse fa-play"></i>
-                Run Auth
-            </button>
-            <button type="button" class="btn btn-primary btn-lg" onclick="getData()">
-                <i class="fa fa-fw fa-inverse fa-play"></i>
-                Get Data
-            </button>
-            <button type="button" class="btn btn-primary btn-lg" onclick="loadSampleData()">
-                <i class="fa fa-fw fa-inverse fa-play"></i>
-                Get sample data
-            </button>
-            <hr/>
-        <pre><code id="output"></code></pre>
-        <a id="userAuthenticated"></a>
-        </main>
 
-        <script type="text/javascript" src="index.js"></script>
+        </header>
+
+        <!-- Sidebar Nav -->
+        <div id="mainContainer">
+            <div id="sidebarNav">
+                <ul class="uk-nav uk-nav-default doc-nav" id="sidebarSectionList">
+
+                </ul>
+            </div>
+            <div id="pageContent">
+                <div id="initialMessage">
+                <h1 class="uk-heading-medium uk-text-center uk-margin-remove-top">PowerUi Docs</h1>
+                <p class="uk-text-lead uk-text-center">Faça o Log in com sua conta @elogroup para acessar a documentação do powerUI</p>
+                </div>
+                <a id="debugSelectedSectionVariable"> teste</a>
+            </div>
+
+        </div>
+
     </body>
 </html>
