feat: implemented the item(actual content) rendering logic

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                 <h1 class="uk-heading-medium uk-text-center uk-margin-remove-top">PowerUi Docs</h1>
                 <p class="uk-text-lead uk-text-center">Faça o Log in com sua conta @elogroup para acessar a documentação do powerUI</p>
                 </div>
-                <a id="debugSelectedSectionVariable"> teste</a>
+                <div id="itemContentDiv">
+                <div>
+                  <p>Esse é um item da div</p>
+                </div>
+                </div>
             </div>
 
         </div>
