--- a/pageTemplate.html
+++ b/pageTemplate.html
@@ -20,7 +20,7 @@
     </nav>
   </div>
   <div class="bodyContent">
-    <div class="sidenav">
+    <div class="debugSidenav">
       <!-- Cada um desses vai ser um topic -->
       <a class="topicItem" href="#about">About</a>
       <!-- Cada um desses vai ser um topic -->
@@ -49,11 +49,47 @@
     </div>
     <div class="main">
       <div class="itemDisplayContainer">
-        <div class="itemcontainerHeader">
+        <div class="containerHeader">
           <p class="itemTitle">Item Title</p>
         </div>
         <div class="itemContentBody">
           <p class="itemText">The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.</p>
+        </div>
+        <div class="itemImage">
+          <img src="/img/TestImage1.png" alt="TestImage">
+        </div>
+      </div>
+      <div class="itemDisplayContainer">
+        <div class="containerHeader">
+          <p class="itemTitle">Item Title</p>
+        </div>
+        <div class="itemContentBody">
+          <p class="itemText">The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.</p>
+        </div>
+        <div class="itemImage">
+          <img src="/img/TestImage1.png" alt="TestImage">
+        </div>
+      </div>
+      <div class="itemDisplayContainer">
+        <div class="containerHeader">
+          <p class="itemTitle">Item Title</p>
+        </div>
+        <div class="itemContentBody">
+          <p class="itemText">The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.</p>
+        </div>
+        <div class="itemImage">
+          <img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="ImageOnTheWeb">
+        </div>
+      </div>
+      <div class="itemDisplayContainer">
+        <div class="containerHeader">
+          <p class="itemTitle">Item Title</p>
+        </div>
+        <div class="itemContentBody">
+          <p class="itemText">The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.The some() method of Array instances tests whether at least one element in the array passes the test implemented by the provided function. It returns true if, in the array, it finds an element for which the provided function returns true; otherwise it returns false. It doesn't modify the array.</p>
+        </div>
+        <div class="itemImage">
+          <img src="https://elogroup.sharepoint.com/SiteAssets/Lists/473f4f64-5200-4133-bf98-dcf975654344/Exponential-growth-of-the-computing-power-Source-Time-Magazine.png" alt="TestImage">
         </div>
       </div>
     </div>
