feat: finished the implementation of dynamic itemdata display and subtopicDisplay

--- a/pageTemplate.html
+++ b/pageTemplate.html
@@ -48,6 +48,14 @@
       </div>
     </div>
     <div class="main">
+      <div class="subTopicDisplayContainer">
+        <div class="containerHeader">
+          <p class="subTopicTitle">Sub Topic Title</p>
+        </div>
+        <div class="itemContentBody">
+          <p class="subTopicText">sadsdasdasdasd</p>
+        </div>
+      </div>
       <div class="itemDisplayContainer">
         <div class="containerHeader">
           <p class="itemTitle">Item Title</p>
