fix: adjusted the js file reference in index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <!-- <link href="css/templateStyles.css" rel="stylesheet"> -->
         <link href="css/powerUiStyles.css" rel="stylesheet">
         <script src="https://www.unpkg.com/@azure/msal-browser@2.20.0/lib/msal-browser.min.js" crossorigin></script>
-        <script type="text/javascript" src="/js/index.js"></script>
-        <script src="/js/uikit.js"></script>
+        <script type="text/javascript" src="/index.js"></script>
+        <!-- <script src="/js/uikit.js"></script> -->
         <title>
             PowerUi CMS PoC
         </title>
